# virtual-moot-court

./: .gitignore  README.md  cmd.md  courtroom_simulator.py  courtroom_simulator_gradio.py  main.py  pdf_processor.py  pyproject.toml  sec437_chunks.jsonl
.devcontainer/: devcontainer.json
